--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 As a freelancer, I have worked on multiple web development projects, assisting clients with everything from front-end development to full-stack solutions. 
             </div>
                 <div class="col-md-6 text-center">
-                  <img src="/portfolio/poimage/logo.png" alt="logo" class="img-fluid w-75">
+                  <img src="./poimage/logo.png" alt="logo" class="img-fluid w-75">
                 </div>
 
             </div>
@@ -99,7 +99,7 @@
                 <div class="row">
              <div class="col-md-3 " >
                 <div class="card" >
-                    <img src="/portfolio/poimage/html.webp" class="card-img-top m-auto " alt="htnl">
+                    <img src="./poimage/html.webp" class="card-img-top m-auto " alt="htnl">
                     <div class="card-body">
                       <h5 class="card-title">HTML</h5>
                     </div>
@@ -107,7 +107,7 @@
              </div>
              <div class="col-md-3 " >
                 <div class="card " >
-                    <img src="/portfolio/poimage/css.webp" class="card-img-top m-auto " alt="htnl">
+                    <img src="./poimage/css.webp" class="card-img-top m-auto " alt="htnl">
                     <div class="card-body">
                       <h5 class="card-title">CSS</h5>
                     </div>
@@ -115,7 +115,7 @@
              </div>
              <div class="col-md-3 " >
                 <div class="card" >
-                    <img src="/portfolio/poimage/pexels-photo-11035471.webp" class="card-img-top m-auto " alt="htnl">
+                    <img src="./poimage/pexels-photo-11035471.webp" class="card-img-top m-auto " alt="htnl">
                     <div class="card-body">
                       <h5 class="card-title">REACT JS</h5>
                     </div>
@@ -123,7 +123,7 @@
              </div>
              <div class="col-md-3 " >
                 <div class="card" >
-                    <img src="/portfolio/poimage/pexels-photo-11035380.webp" class="card-img-top m-auto " alt="htnl">
+                    <img src="./poimage/pexels-photo-11035380.webp" class="card-img-top m-auto " alt="htnl">
                     <div class="card-body">
                       <h5 class="card-title">NODE JS</h5>
                     </div>
